Versuch Json-Properties dynamisch zu setzen

--- a/src/main/resources/application.test.properties
+++ b/src/main/resources/application.test.properties
@@ -4,3 +4,5 @@ spring.data.mongodb.port=
 spring.data.mongodb.database=todoapp
 spring.data.mongodb.username=
 spring.data.mongodb.password=
+
+json.feldname.prio=priority
